# fcp-midi

./: README.md  pyproject.toml
.claude-plugin/: plugin.json
src/fcp_midi/: main.py
